--- a/Implementação/labdev-spring/src/main/resources/application.properties
+++ b/Implementação/labdev-spring/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=labdev-spring
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/labdev-spring
+spring.datasource.url=jdbc:mysql://localhost:3306/labdev-spring
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
