--- a/Implementação/labdev-spring/pom.xml
+++ b/Implementação/labdev-spring/pom.xml
@@ -44,6 +44,12 @@
   <artifactId>thymeleaf-extras-springsecurity6</artifactId>
 </dependency>
 
+		  <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.8.6</version>
+   		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
